--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
     <div class="janela"></div>
     <div>
       <h1 class="tempo">
-        O evento acontecerá: Dia 25/05/2024, seguindo o horário: 8:00 horas até 18:00 horas,
-        na Faculdade de Tecnologia de Araraquara.
+        BREVE DIVULGAREMOS A DATA DO EVENTO, que acontecera
+        na Faculdade de Tecnologia de Araraquara (FATEC).
+        Garanta já sua participação clicando no botão QUERO PARTICIPAR.
       </h1>
       <p class="endereco">
         R. Precide São Martim, 126 - Jardim Santa Clara, Araraquara - SP,
