--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <div class="janela"></div>
     <div>
       <h1 class="tempo">
-        BREVE DIVULGAREMOS A DATA DO EVENTO, que acontecera
-        na Faculdade de Tecnologia de Araraquara (FATEC).
+        DATA DO EVENTO 14/09/2024,
+        acontecerá na Faculdade de Tecnologia de Araraquara (FATEC).
         Garanta já sua participação clicando no botão QUERO PARTICIPAR.
       </h1>
       <p class="endereco">
